# ITKElastix

./: .gitignore  CMakeLists.txt  README.md  README.rst  environment.yml  itk-module.cmake  itk_wasm_env.bash  jupyter_config.json  package-lock.json  package.json  pixi.toml  pnpm-lock.yaml  pyproject.toml  setup.py
.binder/: postBuild  requirements.txt
.jupyter/: jupyter_notebook_config.py
.pyinstaller/: itk-elastix-app.py  itk-elastix-app.spec
binder/: postBuild  requirements.txt
examples/: .gitignore  0_HelloRegistrationWorld.ipynb  1_NumPyArray.ipynb  2_RegistrationParameters.ipynb  3_Masks.ipynb  ITK_Example01_SimpleRegistration.ipynb  ITK_Example02_CustomOrMultipleParameterMaps.ipynb  ITK_Example03_Masked_3D_Registration.ipynb  ITK_Example03_Masked_3D_Registration.ipynb.needtofix  ITK_Example04_InitialTransformAndMultiThreading.ipynb  ITK_Example05_PointRegistration.ipynb  ITK_Example06_GroupwiseRegistration.ipynb  ITK_Example07_MultimetricMultiImageRegistration.ipynb  ITK_Example08_SimpleTransformix.ipynb  ITK_Example09_PointSetAndMaskTransformation.ipynb  ITK_Example10_PointSetAndMaskTransformation.ipynb  ITK_Example10_Transformix_Jacobian.ipynb  ITK_Example11_Transformix_DeformationField.ipynb  ITK_Example13_ITKResampling.ipynb  (+43 more)
wasm/: CMakeLists.txt  ElastixWasm.cxx  default-parameter-map.cxx  elastix-wasm.cxx  itkElastixWasmParameterObject.h  read-parameter-file.cxx  read-parameter-files.cxx  transformix-wasm.cxx  write-parameter-file.cxx  write-parameter-files.cxx
wasm/python/itkwasm-elastix/: README.md  pyproject.toml
wasm/python/itkwasm-elastix-emscripten/: .gitignore  README.md  pyproject.toml
wasm/python/itkwasm-elastix-emscripten/itkwasm_elastix_emscripten/: __init__.py  default_parameter_map_async.py  elastix_async.py  js_package.py  read_parameter_file_async.py  read_parameter_files_async.py  transformix_async.py  write_parameter_file_async.py  write_parameter_files_async.py
wasm/python/itkwasm-elastix-emscripten/test/: fixtures.py  test_itkwasm_elastix.py  test_write_parameter_files_async.py
wasm/python/itkwasm-elastix-emscripten/tests/: fixtures.py  test_default_parameter_map_async.py  test_elastix_async.py  test_read_parameter_files_async.py  test_transformix_async.py  test_write_parameter_files_async.py
wasm/python/itkwasm-elastix-wasi/: README.md  pyproject.toml
wasm/python/itkwasm-elastix-wasi/itkwasm_elastix_wasi/: __init__.py  default_parameter_map.py  elastix.py  read_parameter_file.py  read_parameter_files.py  transformix.py  write_parameter_file.py  write_parameter_files.py
wasm/python/itkwasm-elastix-wasi/itkwasm_elastix_wasi/wasm_modules/: default-parameter-map.wasi.wasm  read-parameter-file.wasi.wasm  read-parameter-files.wasi.wasm  write-parameter-file.wasi.wasm  write-parameter-files.wasi.wasm
wasm/python/itkwasm-elastix-wasi/tests/: common.py  test_default_parameter_map.py  test_elastix.py  test_elastix_wasm.py  test_read_parameter_files.py  test_transformix.py  test_write_parameter_files.py
wasm/python/itkwasm-elastix/docs/: conf.py  index.md  requirements.txt
wasm/python/itkwasm-elastix/itkwasm_elastix/: __init__.py  default_parameter_map.py  default_parameter_map_async.py  elastix.py  elastix_async.py  read_parameter_file.py  read_parameter_file_async.py  read_parameter_files.py  read_parameter_files_async.py  transformix.py  transformix_async.py  write_parameter_file.py  write_parameter_file_async.py  write_parameter_files.py  write_parameter_files_async.py
wasm/python/itkwasm-elastix/tests/: fixtures.py  test_default_parameter_map.py  test_elastix.py  test_itkwasm_elastix.py  test_read_parameter_files.py  test_transformix.py  test_write_parameter_files_async.py
wasm/test/data/baseline/: CT_2D_head_result.mha
wasm/test/data/input/: CT_2D_head_fixed.iwi.cbor  CT_2D_head_moving.iwi.cbor  CT_2D_head_translation.h5  CT_2D_head_translation.json  CT_3D_lung.json  parameters_multiple.json  parameters_single.json  parameters_translations.json
wasm/typescript/: .gitignore  .npmignore  README.md  cypress.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.js
wasm/typescript/cypress/: tsconfig.json
wasm/typescript/cypress/e2e/: common.ts  default-parameter-map.cy.ts  read-parameter-files.cy.ts  write-parameter-files.cy.ts
wasm/typescript/cypress/support/: e2e.ts
wasm/typescript/src/: default-parameter-map-node-options.ts  default-parameter-map-node-result.ts  default-parameter-map-node.ts  default-parameter-map-options.ts  default-parameter-map-result.ts  default-parameter-map.ts  default-web-worker.ts  elastix-node-options.ts  elastix-node-result.ts  elastix-node.ts  elastix-options.ts  elastix-result.ts  elastix-wasm-node-result.ts  elastix-wasm-node.ts  elastix-wasm-options.ts  elastix-wasm-result.ts  elastix-wasm.ts  elastix.ts  index-all.ts  index-common.ts  index-node-only.ts  index-node.ts  index-only.ts  index-worker-embedded.min.ts  index-worker-embedded.ts  index.ts  itkConfig.js  pipeline-worker-url.ts  pipelines-base-url.ts  read-parameter-file-node-result.ts  read-parameter-file-node.ts  read-parameter-file-options.ts  read-parameter-file-result.ts  read-parameter-file.ts  read-parameter-files-node-options.ts  read-parameter-files-node-result.ts  read-parameter-files-node.ts  read-parameter-files-options.ts  read-parameter-files-result.ts  read-parameter-files.ts  (+17 more)
wasm/typescript/test/browser/: app.ts  common.ts  default-parameter-map.spec.ts  index.html  read-parameter-files.spec.ts  style.css  write-parameter-files.spec.ts
wasm/typescript/test/browser/demo-app/: default-parameter-map-controller.ts  default-parameter-map-load-sample-inputs.ts  elastix-controller.ts  elastix-load-sample-inputs.ts  index.html  index.ts  read-parameter-files-controller.ts  read-parameter-files-load-sample-inputs.ts  style.css  utilities.js  write-parameter-files-controller.ts  write-parameter-files-load-sample-inputs.ts
wasm/typescript/test/node/: default-parameter-map-test.js  elastix-test.js  read-parameter-files-test.js  write-parameter-files-test.js
(+210 files in other folders)
