[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "itkwasm-elastix-emscripten"
readme = "README.md"
license = "Apache-2.0"
dynamic = ["version", "description"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: C++",
  "Environment :: WebAssembly",
  "Environment :: WebAssembly :: Emscripten",
  "Environment :: WebAssembly :: WASI",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
keywords = [
  "itkwasm",
  "webassembly",
  "emscripten",
]

requires-python = ">=3.9"
dependencies = [
    "itkwasm >= 1.0.b178",
]

[project.urls]
Home = "https://github.com/InsightSoftwareConsortium/ITKElastix"
Source = "https://github.com/InsightSoftwareConsortium/ITKElastix"

[project.optional-dependencies]
test = ["pytest", "pytest-pyodide", "hatch>=1.12.0,<2", "pyodide-py>=0.26.2,<0.27"]

[tool.hatch.version]
path = "itkwasm_elastix_emscripten/_version.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-pyodide",
]

[tool.hatch.envs.default.scripts]
test = [
  "hatch build -t wheel",
  "pytest --dist-dir=./dist --rt=chrome",
]
download-pyodide = [
  "curl -L https://github.com/pyodide/pyodide/releases/download/0.23.1/pyodide-0.23.1.tar.bz2 -o pyodide.tar.bz2",
  "tar xjf pyodide.tar.bz2",
  "rm -rf dist pyodide.tar.bz2",
  "mv pyodide dist",
]
serve = [
  "hatch build -t wheel",
  'echo "\nVisit http://localhost:8877/console.html\n"',
  "python -m http.server --directory=./dist 8877",
]


[tool.hatch.build]
exclude = [
  "/examples",
  "pyodide.tar.bz2",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
itkwasm-elastix-emscripten = { path = ".", editable = true }

[tool.pixi.environments]
default = {features = [], solve-group = "default"}
test = {features = ["test"], solve-group = "default"}

[tool.pixi.feature.test.dependencies]
curl = ">=8.9.1,<9"
tar = ">=1.34,<2"

[tool.pixi.feature.test.tasks]
download-pyodide = { cmd = "curl -L https://github.com/pyodide/pyodide/releases/download/0.26.2/pyodide-0.26.2.tar.bz2 -o pyodide.tar.bz2 && tar xjf pyodide.tar.bz2 && rm -rf dist/pyodide && mkdir -p dist && mv pyodide dist", description = "Download Pyodide", outputs = ["pyodide.tar.bz2"] }
serve = { cmd = 'hatch build -t wheel ./dist/pyodide/ && echo "Visit http://localhost:8877/console.html" && python -m http.server --directory=./dist/pyodide 8877', description = "Serve the Pyodide distribution", depends-on = ["download-pyodide"] }
test = { cmd = "hatch build -t wheel ./dist/pyodide/ && pytest --dist-dir=./dist/pyodide --rt=chrome", description = "Run the test suite", depends-on = ["download-pyodide"] }
