[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "itkwasm-elastix-wasi"
readme = "README.md"
license = "Apache-2.0"
dynamic = ["version", "description"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: C++",
  "Environment :: WebAssembly",
  "Environment :: WebAssembly :: Emscripten",
  "Environment :: WebAssembly :: WASI",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
keywords = [
  "itkwasm",
  "webassembly",
  "wasi",
]

requires-python = ">=3.9"
dependencies = [
    "itkwasm >= 1.0.b177",
    "importlib_resources",
]

[project.urls]
Home = "https://github.com/InsightSoftwareConsortium/ITKElastix"
Source = "https://github.com/InsightSoftwareConsortium/ITKElastix"

[tool.hatch.version]
path = "itkwasm_elastix_wasi/_version.py"

[project.optional-dependencies]
test = ["itkwasm-image-io>=1.2.1,<2", "itkwasm-compare-images>=5.2.0,<6", "pytest"]

[tool.hatch.build]
exclude = [
  "/examples",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
itkwasm-elastix-wasi = { path = ".", editable = true }

[tool.pixi.feature.test.tasks]
test = { cmd = "pytest -s", description = "Run units tests" }

[tool.pixi.environments]
default = {features = [], solve-group = "default"}
test = {features = ["test"], solve-group = "default"}
